--- a/app/globals.css
+++ b/app/globals.css
@@ -124,3 +124,11 @@
 .placeholder{
   background-color: white;
 }
+
+@theme {
+  
+  --breakpoint-xxs: 380px;
+  --breakpoint-xs: 580px;
+  --breakpoint-tablet: 800px;
+  --breakpoint-3xl: 1600px;
+}
